3-apps/gotify/kustomize/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: gotify
  namespace: gotify
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.gotify.russellhost.org`) # change to your domain
      kind: Rule
      services:
        - name: gotify-headless
          port: 80
    - match: Host(`gotify.russellhost.org`) # change to your domain
      kind: Rule
      services:
        - name: gotify-headless
          port: 80
      middlewares:
        - name: default-headers
  tls:
    secretName: russellhost-tls
